<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".activity.AddTask">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="30dp"
    android:paddingBottom="50dp"
    android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_add_black_24dp"
            android:scaleType="centerCrop" />

        <TextView
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/addtask"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/fill"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:textSize="18sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/title"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/addTaskTitle"
            tools:ignore="MissingPrefix" />

    <TextView
        android:layout_marginLeft="3dp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/desc"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:id="@+id/addTaskDescription"
        tools:ignore="MissingPrefix" />

    <TextView
        android:layout_marginLeft="3dp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/date"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:id="@+id/taskDate"
        tools:ignore="MissingPrefix" />

    <TextView
        android:layout_marginLeft="3dp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/time"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:id="@+id/taskTime"
        tools:ignore="MissingPrefix" />

    <TextView
        android:layout_marginLeft="3dp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/event"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        fontPath="fonts/nunito_light.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:id="@+id/taskEvent"
        tools:ignore="MissingPrefix" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addTask"
        android:text="@string/addtaskk"
        android:background="@drawable/btn_background"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="40dp" />

</LinearLayout>
</ScrollView>